--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "xeur-ai-platform",
-  "description": "Revolutionary AI-powered game development platform - Create complete, production-ready games with simple text prompts",
-  "version": "1.0.0",
+  "name": "@gamecraftstudio/xeur-ai-platform",
+  "description": "Revolutionary AI-powered game development platform - Create complete, production-ready games with simple text prompts. Transform ideas into multi-platform games in ~1 hour vs traditional 1+ years.",
+  "version": "1.2.0",
   "private": true,
   "homepage": "https://xeur.ai",
   "repository": {
@@ -9,32 +9,64 @@
     "url": "https://github.com/Game-Craft-Studio/xeur-ai-blueprint-source.git"
   },
   "bugs": {
-    "url": "https://github.com/Game-Craft-Studio/xeur-ai-blueprint-source/issues"
+    "url": "https://github.com/Game-Craft-Studio/xeur-ai-blueprint-source/issues",
+    "email": "support@xeur.ai"
   },
   "author": {
     "name": "Game Craft Studio",
     "email": "hello@xeur.ai",
     "url": "https://xeur.ai"
   },
+  "contributors": [
+    {
+      "name": "Harshit Verma",
+      "email": "harshit@xeur.ai",
+      "role": "CEO & Co-Founder"
+    },
+    {
+      "name": "Rishav Goyal",
+      "email": "rishav@xeur.ai",
+      "role": "COO & Co-Founder"
+    }
+  ],
   "keywords": [
     "ai",
-    "game-development",
     "artificial-intelligence",
+    "game-development",
+    "game-creation",
+    "llm",
     "next.js",
     "typescript",
     "react",
     "xeur",
-    "game-creation",
     "no-code",
-    "shadcn-ui"
+    "shadcn-ui",
+    "multi-platform",
+    "web3",
+    "blockchain",
+    "creator-economy",
+    "nvidia-inception"
   ],
+  "license": "UNLICENSED",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint --fix",
+    "lint:check": "next lint",
     "type-check": "tsc --noEmit",
-    "preview": "next build && next start"
+    "preview": "next build && next start",
+    "clean": "rm -rf .next out node_modules/.cache",
+    "analyze": "ANALYZE=true next build",
+    "export": "next export",
+    "postinstall": "npm run type-check",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "test": "echo \"Tests will be implemented in upcoming releases\" && exit 0",
+    "test:watch": "echo \"Watch mode tests coming soon\" && exit 0",
+    "security:audit": "npm audit --audit-level=moderate",
+    "deps:update": "npm update",
+    "deps:check": "npm outdated"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -90,6 +122,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@next/bundle-analyzer": "^14.1.0",
     "@next/eslint-plugin-next": "^15.3.2",
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^22.15.21",
@@ -100,30 +133,57 @@
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "globals": "^15.9.0",
     "lovable-tagger": "^1.1.7",
     "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
     "tailwindcss": "^3.4.11",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "typescript-eslint": "^8.0.1"
   },
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=8.0.0"
+    "node": ">=18.17.0",
+    "npm": ">=9.0.0"
   },
   "browserslist": {
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "not ie <= 11"
     ],
     "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+      "last 2 chrome versions",
+      "last 2 firefox versions",
+      "last 2 safari versions",
+      "last 2 edge versions"
     ]
-  }
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "funding": {
+    "type": "venture",
+    "url": "https://xeur.ai/investors"
+  },
+  "os": [
+    "darwin",
+    "linux",
+    "win32"
+  ],
+  "cpu": [
+    "x64",
+    "arm64"
+  ],
+  "volta": {
+    "node": "18.17.0",
+    "npm": "9.6.7"
+  },
+  "packageManager": "npm@9.6.7"
 }
