--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "@gamecraftstudio/xeur-ai-platform",
   "description": "Revolutionary AI-powered game development platform - Create complete, production-ready games with simple text prompts. Transform ideas into multi-platform games in ~1 hour vs traditional 1+ years.",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "private": true,
   "homepage": "https://xeur.ai",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Game-Craft-Studio/xeur-ai-blueprint-source.git"
+    "url": "https://github.com/cpg-xeur-ai/xeur-ai-blueprint-source.git"
   },
   "bugs": {
-    "url": "https://github.com/Game-Craft-Studio/xeur-ai-blueprint-source/issues",
+    "url": "https://github.com/cpg-xeur-ai/xeur-ai-blueprint-source/issues",
     "email": "support@xeur.ai"
   },
   "author": {
-    "name": "Game Craft Studio",
+    "name": "XEUR.AI (Craft Production Group)",
     "email": "hello@xeur.ai",
     "url": "https://xeur.ai"
   },
@@ -45,7 +45,9 @@
     "web3",
     "blockchain",
     "creator-economy",
-    "nvidia-inception"
+    "nvidia-inception",
+    "alpha-beta",
+    "seed-funding"
   ],
   "license": "UNLICENSED",
   "scripts": {
@@ -66,7 +68,9 @@
     "test:watch": "echo \"Watch mode tests coming soon\" && exit 0",
     "security:audit": "npm audit --audit-level=moderate",
     "deps:update": "npm update",
-    "deps:check": "npm outdated"
+    "deps:check": "npm outdated",
+    "lighthouse": "lhci autorun",
+    "prepare": "husky install || true"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -103,6 +107,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
+    "framer-motion": "^11.5.4",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "next": "^14.1.0",
@@ -112,6 +117,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.0",
+    "react-hot-toast": "^2.4.1",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
@@ -137,6 +143,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "globals": "^15.9.0",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
     "lovable-tagger": "^1.1.7",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
@@ -162,6 +170,21 @@
       "last 2 safari versions",
       "last 2 edge versions"
     ]
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md,css}": [
+      "prettier --write"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": "npm run type-check"
+    }
   },
   "config": {
     "commitizen": {
