Create comprehensive environment configuration template for production deployment

--- a/.env.example
+++ b/.env.example
@@ -1,182 +1,113 @@
-# XEUR.AI Platform Environment Configuration
-# Copy this file to .env.local and fill in your actual values
+# XEUR.AI Environment Configuration
+# Copy this file to .env.local and configure your values
 
-# =============================================================================
+# =================================================================
 # APPLICATION CONFIGURATION
-# =============================================================================
-NODE_ENV=development
-NEXT_PUBLIC_APP_URL=http://localhost:3000
-NEXT_PUBLIC_APP_NAME="XEUR.AI Platform"
+# =================================================================
+NEXT_PUBLIC_APP_NAME="XEUR.AI"
+NEXT_PUBLIC_APP_URL="https://xeur.ai"
 NEXT_PUBLIC_APP_DESCRIPTION="Revolutionary AI-powered game development platform"
+NEXT_PUBLIC_ENVIRONMENT="production"
 
-# =============================================================================
-# XEUR.AI API CONFIGURATION
-# =============================================================================
-# Main XEUR.AI API endpoints
-NEXT_PUBLIC_XEUR_API_URL=https://api.xeur.ai
-XEUR_API_KEY=your_xeur_api_key_here
-XEUR_API_SECRET=your_xeur_api_secret_here
+# =================================================================
+# API CONFIGURATION  
+# =================================================================
+NEXT_PUBLIC_API_URL="https://api.xeur.ai"
+NEXT_PUBLIC_API_VERSION="v1"
+API_SECRET_KEY="your-secret-key-here"
 
-# =============================================================================
-# AI MODEL CONFIGURATION
-# =============================================================================
-# XEUR LLM Core Configuration
-XEUR_LLM_ENDPOINT=https://llm.xeur.ai
-XEUR_MODEL_VERSION=v1.2.0
+# =================================================================
+# DATABASE CONFIGURATION (Future)
+# =================================================================
+# DATABASE_URL="postgresql://username:password@localhost:5432/xeur_ai"
+# REDIS_URL="redis://localhost:6379"
 
-# Specialized AI Models
-EUREKA_MODEL_KEY=your_eureka_model_key
-GALILEO_MODEL_KEY=your_galileo_model_key
-NEWTON_MODEL_KEY=your_newton_model_key
-FARADAY_MODEL_KEY=your_faraday_model_key
-CURIE_MODEL_KEY=your_curie_model_key
-ALBERT_MODEL_KEY=your_albert_model_key
-HAWKING_MODEL_KEY=your_hawking_model_key
-RAMANUJAN_MODEL_KEY=your_ramanujan_model_key
-RATAN_MODEL_KEY=your_ratan_model_key
+# =================================================================
+# AUTHENTICATION (Future)
+# =================================================================
+# NEXTAUTH_URL="https://xeur.ai"
+# NEXTAUTH_SECRET="your-auth-secret"
+# GOOGLE_CLIENT_ID="your-google-client-id"
+# GOOGLE_CLIENT_SECRET="your-google-client-secret"
 
-# =============================================================================
-# THIRD-PARTY AI SERVICES
-# =============================================================================
-# Google AI (Gemini API)
-GOOGLE_AI_API_KEY=your_google_ai_api_key_here
-GEMINI_MODEL_NAME=gemini-pro
+# =================================================================
+# EMAIL SERVICE (Beta Signups)
+# =================================================================
+# RESEND_API_KEY="your-resend-api-key"
+# FROM_EMAIL="noreply@xeur.ai"
+# TO_EMAIL="beta@xeur.ai"
 
-# OpenAI (Backup/Complementary)
-OPENAI_API_KEY=your_openai_api_key_here
-
-# =============================================================================
-# CLOUD INFRASTRUCTURE
-# =============================================================================
-# Google Cloud Platform
-GOOGLE_CLOUD_PROJECT_ID=xeur-ai-platform
-GOOGLE_CLOUD_REGION=us-central1
-GOOGLE_APPLICATION_CREDENTIALS=path/to/service-account.json
-
-# NVIDIA DGX Cloud (if approved)
-NVIDIA_DGX_API_KEY=your_nvidia_dgx_api_key
-NVIDIA_DGX_ENDPOINT=https://api.dgx.nvidia.com
-
-# =============================================================================
-# DATABASE CONFIGURATION
-# =============================================================================
-# Primary Database
-DATABASE_URL=postgresql://username:password@localhost:5432/xeur_ai_platform
-DATABASE_POOL_SIZE=10
-
-# Redis Cache
-REDIS_URL=redis://localhost:6379
-REDIS_PASSWORD=your_redis_password
-
-# =============================================================================
-# AUTHENTICATION & SECURITY
-# =============================================================================
-# NextAuth.js Configuration
-NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=your_nextauth_secret_here
-
-# JWT Configuration
-JWT_SECRET=your_jwt_secret_here
-JWT_EXPIRATION=24h
-
-# OAuth Providers
-GOOGLE_CLIENT_ID=your_google_client_id
-GOOGLE_CLIENT_SECRET=your_google_client_secret
-
-GITHUB_CLIENT_ID=your_github_client_id
-GITHUB_CLIENT_SECRET=your_github_client_secret
-
-# =============================================================================
-# EMAIL & NOTIFICATIONS
-# =============================================================================
-# Email Service (SendGrid)
-SENDGRID_API_KEY=your_sendgrid_api_key
-SENDGRID_FROM_EMAIL=noreply@xeur.ai
-
-# Notification Services
-SLACK_WEBHOOK_URL=your_slack_webhook_url
-DISCORD_WEBHOOK_URL=your_discord_webhook_url
-
-# =============================================================================
-# PAYMENT & BILLING
-# =============================================================================
-# Stripe Configuration
-STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
-STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
-STRIPE_WEBHOOK_SECRET=whsec_your_stripe_webhook_secret
-
-# =============================================================================
+# =================================================================
 # ANALYTICS & MONITORING
-# =============================================================================
-# Google Analytics
-NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
+# =================================================================
+NEXT_PUBLIC_GOOGLE_ANALYTICS_ID="G-XXXXXXXXXX"
+NEXT_PUBLIC_GOOGLE_TAG_MANAGER_ID="GTM-XXXXXXX"
+# SENTRY_DSN="your-sentry-dsn"
+# HOTJAR_ID="your-hotjar-id"
 
-# Microsoft Clarity
-NEXT_PUBLIC_CLARITY_PROJECT_ID=your_clarity_project_id
+# =================================================================
+# SOCIAL MEDIA & SEO
+# =================================================================
+NEXT_PUBLIC_TWITTER_HANDLE="@xeur_ai"
+NEXT_PUBLIC_LINKEDIN_URL="https://linkedin.com/company/xeur-ai"
+NEXT_PUBLIC_GITHUB_URL="https://github.com/cpg-xeur-ai"
 
-# Sentry Error Tracking
-SENTRY_DSN=your_sentry_dsn_here
-SENTRY_ORG=xeur-ai
-SENTRY_PROJECT=platform
+# =================================================================
+# FEATURE FLAGS
+# =================================================================
+NEXT_PUBLIC_BETA_SIGNUP_ENABLED="true"
+NEXT_PUBLIC_DEMO_VIDEO_ENABLED="true"
+NEXT_PUBLIC_NVIDIA_PARTNERSHIP_HIGHLIGHT="true"
+NEXT_PUBLIC_FUNDING_STATUS_BANNER="true"
 
-# =============================================================================
-# DEVELOPMENT & DEBUGGING
-# =============================================================================
-# Enable debug modes
-DEBUG_MODE=false
-VERBOSE_LOGGING=false
+# =================================================================
+# AI MODEL CONFIGURATION (Future)
+# =================================================================
+# XEUR_LLM_ENDPOINT="https://inference.xeur.ai"
+# XEUR_API_KEY="your-xeur-api-key"
+# OPENAI_API_KEY="your-openai-fallback-key"
 
-# Feature Flags
-ENABLE_BETA_FEATURES=false
-ENABLE_AI_DEBUGGING=false
-ENABLE_PERFORMANCE_MONITORING=true
+# =================================================================
+# CLOUD SERVICES
+# =================================================================
+# Google Cloud Platform
+# GOOGLE_CLOUD_PROJECT_ID="xeur-ai-production"
+# GOOGLE_CLOUD_STORAGE_BUCKET="xeur-ai-assets"
 
-# =============================================================================
-# WEB3 & BLOCKCHAIN CONFIGURATION
-# =============================================================================
-# XEUR Connect Configuration
-WEB3_PROVIDER_URL=https://mainnet.infura.io/v3/your_infura_project_id
-XEUR_CONNECT_CONTRACT_ADDRESS=0x...
-XEUR_CONNECT_PRIVATE_KEY=your_private_key_here
+# AWS (if using for CDN)
+# AWS_ACCESS_KEY_ID="your-aws-access-key"
+# AWS_SECRET_ACCESS_KEY="your-aws-secret-key"
+# AWS_REGION="us-east-1"
 
-# NFT Marketplace
-NFT_MARKETPLACE_URL=https://marketplace.xeur.ai
-NFT_CONTRACT_ADDRESS=0x...
+# =================================================================
+# DEPLOYMENT CONFIGURATION
+# =================================================================
+PORT=3000
+NODE_ENV="production"
+NEXT_TELEMETRY_DISABLED=1
 
-# =============================================================================
-# RATE LIMITING & QUOTAS
-# =============================================================================
-# API Rate Limits
-RATE_LIMIT_REQUESTS_PER_MINUTE=100
-RATE_LIMIT_REQUESTS_PER_HOUR=1000
+# =================================================================
+# SECURITY
+# =================================================================
+# ENCRYPTION_KEY="your-encryption-key"
+# JWT_SECRET="your-jwt-secret"
+# CORS_ORIGIN="https://xeur.ai,https://www.xeur.ai"
 
-# Generation Quotas
-FREE_TIER_GENERATIONS_PER_DAY=3
-PRO_TIER_GENERATIONS_PER_DAY=50
-ENTERPRISE_TIER_GENERATIONS_PER_DAY=unlimited
+# =================================================================
+# THIRD-PARTY INTEGRATIONS
+# =================================================================
+# Stripe (for future payments)
+# STRIPE_PUBLISHABLE_KEY="pk_live_..."
+# STRIPE_SECRET_KEY="sk_live_..."
+# STRIPE_WEBHOOK_SECRET="whsec_..."
 
-# =============================================================================
-# ASSET STORAGE
-# =============================================================================
-# Cloud Storage for Generated Assets
-AWS_S3_BUCKET=xeur-ai-generated-assets
-AWS_ACCESS_KEY_ID=your_aws_access_key
-AWS_SECRET_ACCESS_KEY=your_aws_secret_key
-AWS_REGION=us-east-1
+# Zapier/Make.com (automation)
+# ZAPIER_WEBHOOK_URL="https://hooks.zapier.com/..."
 
-# CDN Configuration
-CDN_URL=https://cdn.xeur.ai
-CDN_API_KEY=your_cdn_api_key
-
-# =============================================================================
-# INTERNAL TOOLS & INTEGRATIONS
-# =============================================================================
-# Internal Documentation
-INTERNAL_DOCS_URL=https://docs.internal.xeur.ai
-
-# Team Communication
-INTERNAL_SLACK_TOKEN=xoxb-your-internal-slack-token
-
-# Project Management
-NOTION_TOKEN=secret_your_notion_token
-NOTION_DATABASE_ID=your_notion_database_id
+# =================================================================
+# DEVELOPMENT ONLY
+# =================================================================
+# Uncomment for development environment
+# NEXT_PUBLIC_ENVIRONMENT="development"
+# NEXT_PUBLIC_APP_URL="http://localhost:3000"
+# NEXT_PUBLIC_API_URL="http://localhost:3001"
